--- a/src/main/webapp/web_page/back_user_management.html
+++ b/src/main/webapp/web_page/back_user_management.html
@@ -3,6 +3,19 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="./Style/skin.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+    <script src="Js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            if(($("checkbox").val())===1){
+                $("checkbox").prop('checked', 'checked');
+            }
+            else{
+                $("checkbox").prop('checked', false);
+            }
+        })
+    </script>
 </head>
     <body>
         <table width="100%" border="0" cellpadding="0" cellspacing="0">
@@ -23,18 +36,7 @@
                 <!--第一行中间内容-->
                 <td valign="top" bgcolor="#F7F8F9">
                     <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
-                        <!-- 空白行-->
-                        <tr><td colspan="2" valign="top">&nbsp;</td><td>&nbsp;</td><td valign="top">&nbsp;</td></tr>
-                        <tr>
-                            <td colspan="4">
-                                <table>
-                                    <tr>
-                                        <td width="100" align="center"><img src="./Images/mime.gif" /></td>
-                                        <td valign="bottom"><h3 style="letter-spacing:1px;"> </h3></td>
-                                    </tr>
-                                </table>
-                            </td>
-                        </tr>
+
                         <!-- 一条线 -->
                         <tr>
                             <td height="40" colspan="4">
@@ -46,8 +48,80 @@
                         <!-- 产品列表开始 -->
                         <!-- 在这里添加内容 -->
                         <tr>
-                            <td>111</td>
+                            <div class="ui container">
+                                <div class="ui attached segment">
+                                    <form action="query" method="get" style="display: inline-block !important;">
+                                        <input type="text" name="username" placeholder="输入关键字查找">
+                                        <input type="submit" value="搜索">
+                                    </form>
+                                    <a th:href="@{update}" class="ui button mini teal" style="margin-left: 30px !important;">新增</a>
+                                </div>
+                                <table class="ui celled attached table" style="margin-top: 40px !important;">
+                                    <thead>
+                                    <tr>
+                                        <td>用户名</td>
+                                        <td>角色</td>
+                                        <td>会员类型</td>
+                                        <td>推荐人用户名</td>
+                                        <td>状态(是否启用)</td>
+                                        <td>最后修改时间</td>
+                                        <td>操作</td>
+                                    </tr></thead>
+                                    <tbody>
+                                    <tr th:each="user : ${page.list}">
+                                        <td th:text="${user.username}"></td>
+                                        <td th:text="${user.rolename}"></td>
+                                        <td th:text="${user.usertypename}"></td>
+                                        <td th:text="${user.refercode}"></td>
+                                        <td>
+                                            <input type="checkbox" name="isStart" checked="checked" th:value="${user.isstart}">
+                                        </td>
+                                        <td th:text="${user.lastupdatetime}"></td>
+                                        <td>
+                                            <a th:href="@{/edit/{id}(id=${user.id})}" class="ui button mini pink">编辑</a>
+                                            <a th:href="@{/delete/{id}(id=${user.id})}" class="ui button mini teal">删除</a>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                                <div class="ui attached segment" >
+                                    <table class="m-mobile-wide" width="425px">
+                                        <tbody>
+                                        <tr align="center">
+                                            <td>
+                                                <a th:href="@{/query(pageNum=${page.pageNum-1})}"  class="ui button basic mini" th:unless="${page.isFirstPage}">上一页</a>
+                                            </td>
+                                            <td>
+                                                第
+                                                <h8 th:text="${page.pageNum}"></h8>
+                                                页/共
+                                                <h8 th:text="${page.pages}"></h8>
+                                                页
+                                                共
+                                                <h8 th:text="${page.total}"></h8>
+                                                条
+                                            </td>
+                                            <td>
+<!--                                                <form name="pageForm" th:action="@{user/}" method="get">-->
+<!--                                                    <div class="ui mini input ">-->
+<!--                                                        <input type="text" class="m-bg" name="pageNum" placeholder="页码" style="width: 50px!important; height: 27.76px!important;" required>-->
+<!--                                                        <button type="submit" style="font-size: 11px!important;width: 30px!important; height: 0px!important; border: none;margin: 5px;padding: 0;" class="button mini">-->
+<!--                                                            跳转-->
+<!--                                                        </button>-->
+<!--                                                    </div>-->
+<!--                                                </form>-->
+                                            </td>
+                                            <td> &nbsp;</td>
+                                            <td  style="float: right">
+                                                <a th:href="@{/query(pageNum=${page.pageNum+1})}"class="ui button basic mini " style="float: right;" th:unless="${page.isLastPage}">下一页</a>
+                                            </td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
                         </tr>
+
                         <!-- 产品列表结束 -->
                         <tr>
                             <td height="40" colspan="4">
@@ -57,27 +131,9 @@
                             </td>
                         </tr>
                         <tr>
-                            <td width="2%">&nbsp;</td>
-                            <td width="51%" class="left_txt">
-                                <img src="./Images/icon_mail.gif" width="16" height="11">客户邮箱slmail@123.com<br />
-                            </td>
-                            <td>&nbsp;</td><td>&nbsp;</td>
                         </tr>
                     </table>
                 </td>
-                <td background="./Images/mail_right_bg.gif">&nbsp;</td>
-            </tr>
-            <!-- 底部部分 -->
-            <tr>
-                <td valign="bottom" background="./Images/mail_left_bg.gif">
-                    <img src="./Images/buttom_left.gif" width="17" height="17" />
-                </td>
-                <td background="./Images/buttom_bgs.gif">
-                    <img src="./Images/buttom_bgs.gif" width="17" height="17">
-                </td>
-                <td valign="bottom" background="./Images/mail_right_bg.gif">
-                    <img src="./Images/buttom_right.gif" width="16" height="17" />
-                </td>           
             </tr>
         </table>
     </body>
