--- a/src/main/webapp/web_page/index.html
+++ b/src/main/webapp/web_page/index.html
@@ -1,17 +1,18 @@
-<!DOCTYPE html >
-<html >
+<!DOCTYPE html>
+<html  lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>sl商城网站后台管理中心</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <frameset rows="64,*"  frameborder="no" border="0" framespacing="0">
     <!--头部-->
-    <frame src="top.html" name="top" noresize="noresize" frameborder="0"  scrolling="no" marginwidth="0" marginheight="0" />
+    <frame src="top" name="top" noresize="noresize" frameborder="0"  scrolling="no" marginwidth="0" marginheight="0" />
     <!--主体部分-->
     <frameset cols="185,*">
         <!--主体左部分-->
         <frame src="./left.html" name="left" noresize="noresize" frameborder="0" scrolling="no" marginwidth="0" marginheight="0" />
         <!--主体右部分-->
         <frame src="./main.html" name="main" frameborder="0" scrolling="auto" marginwidth="0" marginheight="0" />
+    </frameset>
 </frameset>
 </html>
