--- a/src/main/webapp/web_page/left.html
+++ b/src/main/webapp/web_page/left.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html >
-<html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script src="./Js/prototype.lite.js" type="text/javascript"></script>
@@ -38,13 +38,13 @@
                             </tr>
                         </table>
                         <ul class="RM">
-                            <li><a href="./back_user_management.html" target="main">用户管理</a></li>
-                            <li><a href="./back_role_management.html" target="main">角色管理</a></li>
-                            <li><a href="./back_authority_management.html" target="main">权限管理</a></li>
-                            <li><a href="./back_goods_management.html" target="main">商品管理</a></li>
-                            <li><a href="./back_goods_package_management.html" target="main">商品套餐管理</a></li>
-                            <li><a href="./back_basic_management.html" target="main">基础信息</a></li>
-                            <li><a href="./back_dd_management.html" target="main">数据字典</a></li>
+                            <li><a href="/back_user" target="main">用户管理</a></li>
+                            <li><a href="/back_authority_management.html" target="main">权限管理</a></li>
+                            <li><a href="/goodsinfo/test486" target="main" >商品管理</a></li>
+                            <li><a href="/back_role_management.html" target="main">角色管理</a></li>
+                            <li><a href="/back_goods_package_management.html" target="main">商品套餐管理</a></li>
+                            <li><a href="/back_basic_management.html" target="main">基础信息</a></li>
+                            <li><a href="/back_dd_management.html" target="main">数据字典</a></li>
                         </ul>
                     </div>
                     <h1 class="type"><a href="javascript:void(0)">会员管理</a></h1>
