--- a/src/main/webapp/web_page/top.html
+++ b/src/main/webapp/web_page/top.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html  lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="./Style/skin.css" />
@@ -8,14 +8,14 @@
             if(window.confirm('您确定要退出吗？')) {
                 top.location = 'login.html';
             }
-        }       
+        }
     </script>
 </head>
     <body>
         <table cellpadding="0" width="100%" height="64" background="./Images/top_top_bg.gif" >
             <tr valign="top">
-<!--                <td width="70%"><a href="javascript:void(0)"></a></td>-->
-<!--                <td width="30%" style="padding-top:13px;font:15px Arial,SimSun,sans-serif;color:#FFF"> 当前用户:<b></b>  &nbsp;&nbsp;&nbsp;&nbsp;<a style="color:white" href="#">安全退出</a></td>-->
+           <td width="70%"></td>
+               <td width="30%" style="padding-top:13px;font:15px Arial,SimSun,sans-serif;color:#FFF"> 当前用户:<span th:text="${session.auUser.username}"></span>  &nbsp;&nbsp;&nbsp;&nbsp;<a style="color:white" onclick="return confirm('确认退出');" href="logout">安全退出</a></td>
             </tr>
         </table>
     </body>
