--- a/src/main/webapp/web_page/left.html
+++ b/src/main/webapp/web_page/left.html
@@ -39,9 +39,9 @@
                         </table>
                         <ul class="RM">
                             <li><a href="/back_user" target="main">用户管理</a></li>
-                            <li><a href="/back_authority_management.html" target="main">权限管理</a></li>
-                            <li><a href="/goodsinfo/test486" target="main" >商品管理</a></li>
                             <li><a href="/back_role_management.html" target="main">角色管理</a></li>
+                            <li><a href="/back_authority_management.html" target="main">权限管理</a></li>
+                            <li><a href="goodsinfo/test486" target="main" >商品管理</a></li>
                             <li><a href="/back_goods_package_management.html" target="main">商品套餐管理</a></li>
                             <li><a href="/back_basic_management.html" target="main">基础信息</a></li>
                             <li><a href="/back_dd_management.html" target="main">数据字典</a></li>
