--- a/src/main/webapp/web_page/back_user_management.html
+++ b/src/main/webapp/web_page/back_user_management.html
@@ -7,15 +7,35 @@
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
     <script src="Js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript">
-        $(document).ready(function () {
-            if(($("checkbox").val())===1){
-                $("checkbox").prop('checked', 'checked');
+    $(document).ready(function (){
+        $("#add").bind("click",function (){
+            window.location="./back_user_edit.html";
+        });
+        $(".status").change(function () {
+            var attr = $(this).prop("checked");
+            var uid = $(this).attr("uid");
+            var isStart;
+            if (attr) {
+                isStart = 1;
+            } else {
+                isStart = 0;
             }
-            else{
-                $("checkbox").prop('checked', false);
-            }
-        })
-    </script>
+            $.ajax({
+                url: "/user_start_change",
+                type: "POST",
+                data: {isStart: isStart, uid: uid},
+                dataType: "text",
+                success: function (data) {
+                    if (data) {
+                        alert("状态修改成功！");
+                    } else {
+                        alert("状态修改失败！");
+                    }
+                }
+            })
+        });
+    })
+</script>
 </head>
     <body>
         <table width="100%" border="0" cellpadding="0" cellspacing="0">
@@ -51,10 +71,10 @@
                             <div class="ui container">
                                 <div class="ui attached segment">
                                     <form action="query" method="get" style="display: inline-block !important;">
-                                        <input type="text" name="username" placeholder="输入关键字查找">
+                                        <input type="text" name="username" placeholder="输入关键字查找" th:value="${queryname}">
                                         <input type="submit" value="搜索">
                                     </form>
-                                    <a th:href="@{update}" class="ui button mini teal" style="margin-left: 30px !important;">新增</a>
+                                    <a id="add" class="ui button mini teal" style="margin-left: 30px !important;">新增</a>
                                 </div>
                                 <table class="ui celled attached table" style="margin-top: 40px !important;">
                                     <thead>
@@ -74,7 +94,7 @@
                                         <td th:text="${user.usertypename}"></td>
                                         <td th:text="${user.refercode}"></td>
                                         <td>
-                                            <input type="checkbox" name="isStart" checked="checked" th:value="${user.isstart}">
+                                            <input type="checkbox" name="isStart"  th:checked="${user.isstart} eq 1"  th:value="1" class="status" th:attr="uid=${user.id}">
                                         </td>
                                         <td th:text="${user.lastupdatetime}"></td>
                                         <td>
@@ -120,17 +140,6 @@
                                     </table>
                                 </div>
                             </div>
-                        </tr>
-
-                        <!-- 产品列表结束 -->
-                        <tr>
-                            <td height="40" colspan="4">
-                                <table width="100%" height="1" border="0" cellpadding="0" cellspacing="0" bgcolor="#CCCCCC">
-                                    <tr><td></td></tr>
-                                </table>
-                            </td>
-                        </tr>
-                        <tr>
                         </tr>
                     </table>
                 </td>
