--- a/src/main/webapp/web_page/login.html
+++ b/src/main/webapp/web_page/login.html
@@ -32,7 +32,7 @@
                             <td valign="top" id="form">
                                 <form id="fmLogin" method="post" action="login">
                                     <table valign="top" width="50%">
-                                        <tr><td colspan="2"><h4 style="letter-spacing:1px;font-size:16px;">sl商城管理系统</h4></td></tr>
+                                        <tr><td colspan="2"><h4 style="letter-spacing:1px;font-size:16px;">sl商城管理系统</h4></td><td th:text="${session.login_msg} ?: ''" style="font-size: 8px;color: red;width: 32px;" colspan="4"></td></tr>
                                         <tr><td>用户名：</td><td><input type="text" name="loginCode" required /></td></tr>
                                         <tr><td>密&nbsp;&nbsp;&nbsp;&nbsp;码：</td><td><input type="password" name="password" required value="123456"/></td></tr>
                                         <tr class="bt"><td>&nbsp;</td><td><input type="submit" value="登录" />&nbsp;<input type="reset" value="重填" /></td></tr>
